--- a/wp-content/themes/utvecklarkollektivet/style.css
+++ b/wp-content/themes/utvecklarkollektivet/style.css
@@ -48,11 +48,30 @@ p {
 	font-size: 0.875em;
 }
 
+a {
+	color: #006e30;
+}
+
+a:hover,
+a:focus {
+	color: #148040;
+	text-decoration: none;
+	border-bottom: 1px solid #148040;
+}
+
 /* ! Header
 ======================== */
 
 header {
 	border-bottom: 2px solid #ddd;
+}
+
+header a:hover {
+	border-bottom: 0;
+}
+
+.uk-logo:hover {
+	opacity: 0.9;
 }
 
 .uk-menu {
