Login functionality without wordpress default login

--- a/wp-content/themes/utvecklarkollektivet/style.css
+++ b/wp-content/themes/utvecklarkollektivet/style.css
@@ -104,6 +104,10 @@ header a:hover {
 	list-style: none;
 }
 
+.uk-meta-user {
+	text-transform: capitalize;
+}
+
 
 /* ! FRONTPAGE
 ======================== */
