--- a/wp-content/themes/utvecklarkollektivet/style.css
+++ b/wp-content/themes/utvecklarkollektivet/style.css
@@ -59,6 +59,26 @@ a:focus {
 	border-bottom: 1px solid #148040;
 }
 
+/* ! Message
+======================== */
+#uk-message {
+	min-width: 100%;
+	max-width: 100%;
+	padding: 20px;
+	text-align: center;
+	background: #148040;
+	display: none;
+	color: #fff;
+	font-family: "Noto Sans", sans-serif;
+	font-size: 2em;
+	cursor: crosshair;
+}
+
+#uk-message p {
+	margin: 0;
+	padding: 0;
+}
+
 /* ! Header
 ======================== */
 
@@ -76,6 +96,7 @@ header a:hover {
 
 .uk-menu {
 	list-style: none;
+	margin: 0;
 }
 
 .uk-menu li {
@@ -100,14 +121,46 @@ header a:hover {
 	background: #f9f9f9;
 }
 
+/* ! Authentication
+======================== */
+
 .uk-meta {
 	list-style: none;
+	margin: 0;
 }
 
 .uk-meta-user {
 	text-transform: capitalize;
 }
 
+.uk-login-error {
+	color: #80141e;
+}
+
+.uk-meta label {
+	margin: 0;
+}
+
+.uk-meta input {
+	margin: 0 0 10px 0;
+}
+
+.uk-login-rememberme {
+	display: block;
+	float: left;
+	margin: 4px 0 0 5px !important;
+	clear: right;
+}
+
+.uk-login-rememberme-label {
+	float: left;
+}
+
+.uk-login-submit {
+	margin-top: 10px;
+	display: block;
+	clear: both;
+}
 
 /* ! FRONTPAGE
 ======================== */
