Render issues at project page

--- a/wp-content/themes/utvecklarkollektivet/style.css
+++ b/wp-content/themes/utvecklarkollektivet/style.css
@@ -271,6 +271,14 @@ header a:hover {
 .commits strong {
 	font-size: .8em;
 }
+
+.issues {
+	list-style: none;
+}
+
+.issues p {
+	padding: .4em;
+}
 /* ! HELPERS
 ======================== */
 
